[gd_scene load_steps=2 format=2]

[ext_resource path="res://Room.gd" type="Script" id=1]

[node name="Room" type="Node2D"]
script = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]

[node name="RoomView" type="Node2D" parent="Area2D"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area2D"]
z_index = 2
polygon = PoolVector2Array( 0, 0, 96, 0, 96, 96, 0, 96 )
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_Area2D_area_exited"]
